[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Invader.gd" type="Script" id=1]
[ext_resource path="res://Textures/invaders1-1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 30.4881, 23.0213 )

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Invader" type="Node2D" index="0"]

scale = Vector2( 0.9, 0.9 )
_sections_unfolded = [ "Transform" ]

[node name="Invader" type="KinematicBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index", "collision" ]
bullet_frequency = 5

[node name="CollisionShape" type="CollisionShape2D" parent="Invader" index="0"]

shape = SubResource( 2 )

[node name="RayCast" type="RayCast2D" parent="Invader" index="1"]

position = Vector2( 0, 25 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="InvaderArea" type="Area2D" parent="Invader" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionArea" type="CollisionShape2D" parent="Invader/InvaderArea" index="0"]

shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Invader/InvaderArea" index="1"]

frames = SubResource( 1 )
animation = "default"

[connection signal="body_entered" from="Invader/InvaderArea" to="Invader" method="_on_InvaderArea_body_entered"]


